internal/render/testdata/ombi/k8s/play/ombi/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ombi
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: ombi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - ombi.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ombi
          port: 3579
