internal/render/testdata/ombi/k8s/play/ombi/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: ombi
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: ombi
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3579
