internal/render/testdata/ombi/k8s/play/ombi/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: ombi
    spec:
      containers:
        - name: ombi
          image: docker.io/linuxserver/ombi:4.43.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3579
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
